# synthetizer_vue3

./: .gitignore  audioworklet.tsconfig.json  nuxt.config.ts  package-lock.json  package.json
app/: app.vue
app/components/: canvas_handler.vue  canvas_vue.vue  default_button.vue  default_knob.vue  default_number_input.vue  echo_mod.vue  filter_mod.vue  input_knob.vue  sampler.vue  sampler_canvas_vue.vue  synthetizer.vue  test_component.vue
app/composables/: midi.ts  use_synth_api.ts
app/config/: default_echo.ts  default_filter.ts  default_sampler.ts
app/midi/: midi_controller_service.ts
app/pages/: index.vue  synthpage.vue
app/plugins/: keyListener.client.ts  midi_controller_plugin.client.ts  synth_api_plugin.client.ts
app/scripts/: test.ts
app/sound/: audio_engine_orchestrator.ts  audio_worket_manager.ts  rustWorker.ts  sampler_processor_worker.ts  synth_api_service.ts
app/sound/rust-synth/: Cargo.toml
app/sound/rust-synth/src/: api.rs  global.rs  lib.rs
app/sound/rust-synth/src/shared_memory/: mod.rs  ring_buffer_manager.rs  shared_buffers.rs
app/sound/rust-synth/src/sound_engine/: event_handler.rs  mod.rs  processor.rs
app/sound/rust-synth/src/sound_engine/dsp/: fx.rs  mixer.rs  mod.rs
app/sound/rust-synth/src/sound_engine/synthetizer/: mod.rs  note.rs  note_manager.rs  sample_manager.rs  sampler.rs
app/sound/rust-synth/src/utils/: constants.rs  mod.rs  toolkit.rs  types.rs
app/state/: loaded_files.ts
app/types/: canvas.ts  echo.ts  filter.ts  note.ts  sampler.ts
public/: audio_worket_manager.js
(+2 files in other folders)
