[package]
name = "rust-synth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
once_cell = "1.21.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.80", features = ["console", "Window", "WorkerGlobalScope"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"          # "z" = optimisé pour la taille, "s" pour la taille, 3 pour la vitesse max
lto = true               # Link Time Optimization pour améliorer les performances
codegen-units = 1        # Réduit le parallélisme de compilation mais améliore l'optimisation
panic = "abort"          # Évite l’overhead des unwinds, important pour wasm
strip = "debuginfo" 
